# advanced-notes

./: .gitignore  AGENTS.md  CLAUDE.md  GLOSSARY.md  Makefile  README.md
.cursor/rules/: coding-standards.md  development-workflow.md  project-overview.md
.github/workflows/: ci-backend-tests.yml  ci-frontend-tests.yml  ci-migrations-postgres.yml
backend/: Procfile  README.md  alembic.ini  migrate.py  pyproject.toml  requirements.txt  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 025497cfb4da_add_note_embeddings.py  191595ef5470_add_ask_history.py  1ec4c0eb879f_add_user_id_for_user_isolation_to_.py  53f5fe358d4b_add_digest_table.py  59f59dd2197b_add_audio_clips.py  a1b2c3d4e5f6_add_user_settings_and_todos.py  b2c3d4e5f6g7_add_meal_tracking.py  c3d4e5f6g7h8_add_usage_tracking.py  d4e5f6g7h8i9_add_feedback_table.py
backend/app/: __init__.py  asr.py  auth.py  config.py  database.py  routes.py
backend/app/services/: ai_categorizer.py  ask_service.py  container.py  email_service.py  embeddings.py  folder_utils.py  meal_extractor.py  models.py  openai_provider.py  query_planner.py  s3_audio.py  storage.py  summarizer.py  usage_tracking.py
backend/tests/: README.md  test_api_routes.py  test_asr.py  test_auth.py  test_embeddings.py  test_happy_path.py  test_meals.py  test_query_planner.py  test_s3_audio.py
backend/tests/services/: __init__.py  test_ask.py  test_categorizer.py  test_storage.py
docs/: README.md  ai-service-implementation.md  api-reference.md  audio-clips-s3.md  audio-recording-system.md  authentication-flow-explained.md  clerk-authentication-setup.md  clerk-redirect-configuration.md  deployment-lessons.md  environment-setup.md  frontend-router-setup.md  railway-cli-guide.md  railway-deployment.md  semantic-organization-spec.md  user-isolation-migration.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: AudioUploader.tsx  CategoryResult.tsx  DayMealsSlideOver.tsx  EmptyState.test.tsx  EmptyState.tsx  FolderTree.tsx  MealCalendar.tsx  MealDetailSlideOver.tsx  MealRecorder.tsx  NoteDetail.tsx  NotesList.tsx  NotesPanel.tsx  QueryStateRenderer.test.tsx  QueryStateRenderer.tsx  SearchBar.tsx  SuggestedTodos.tsx  TagCloud.tsx  TodoItem.tsx  TodoList.test.tsx  TodoList.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/components/ui/: SlideOver.tsx
frontend/src/hooks/: useFeedback.ts  useMeals.ts  useNotes.ts  useSettings.ts  useTodos.ts
frontend/src/lib/: api.ts
frontend/src/routes/: __root.tsx  dashboard.tsx  feedback.tsx  index.tsx  meals.tsx  notes.tsx  settings.tsx  sign-in.$.tsx  sign-up.$.tsx  summaries.tsx  todos.tsx
frontend/src/test/: setup.ts
scripts/: deploy-backend.sh  deploy-frontend.sh  railway-helpers.sh  railway-setup.sh
